Improved theme color generation and fixed contrast issues

--- a/styles.css
+++ b/styles.css
@@ -29,22 +29,24 @@
   --z-index-content: 100;
   --z-index-gutter: 90;
   --z-index-fixed: 150;
-
-  --color-background-light: rgba(255, 255, 255, 0.15);
-  --color-line-number: rgba(255, 255, 255, 0.5);
-  --color-default-text: #ffffff;
-  --color-default-dark-text: #131313;
-  --color-content-text: rgba(255, 255, 255, 0.9);
 }
 
 body.default-theme {
   --wallpaper: url('img/wallpaper.jpg');
-  --color-window: rgba(18, 18, 16, 0.91);
+
+  --color-border: #f0d1ce;
+  --color-background: rgba(18, 18, 16, 0.91);
+  --color-background-light: rgba(255, 255, 255, 0.15);
+
   --color-primary: #fecfc7;
   --color-secondary: #445d86;
-  --color-accent-text: #333;
+
+  --color-default-text: #ffffff;
+  --color-accent-text: #333333;
   --color-secondary-text: #7493ff;
-  --color-border: #f0d1ce;
+  --color-content-text: #eeeeee;
+
+  --color-line-number: #8c8c8c;
 }
 
 body {
@@ -53,7 +55,7 @@ body {
   font-family: var(--font-family);
   font-size: var(--font-size);
   background-image: var(--wallpaper);
-  background-color: var(--color-window);
+  background-color: var(--color-background);
   background-size: cover;
 }
 
@@ -76,7 +78,7 @@ body {
   border: 2px solid var(--color-border);
   display: flex;
   flex-direction: column;
-  background-color: var(--color-window);
+  background-color: var(--color-background);
   box-shadow: 2px 2px 10px 1px #0000009c;
 }
 
@@ -130,7 +132,7 @@ a {
 
 a:hover, a:focus {
   background-color: var(--color-primary);
-  color: var(--color-default-dark-text);
+  color: var(--color-accent-text);
   font-weight: normal;
 }
 
@@ -293,7 +295,7 @@ code > pre {
 }
 
 .tab-active, .block-primary, .block-secondary, th {
-  color: var(--color-default-dark-text);
+  color: var(--color-accent-text);
 }
 
 main {
@@ -353,11 +355,11 @@ footer {
   height: auto;
   display: flex;
   flex-direction: column;
-  background-color: var(--color-window);
+  background-color: var(--color-background);
 }
 
 #commands {
-  background-color: var(--color-window);
+  background-color: var(--color-background);
 }
 
 .block {
